--- a/package.json
+++ b/package.json
@@ -9,6 +9,29 @@
   "author": "ljy",
   "license": "MIT",
   "devDependencies": {
+    "babel-core": "^6.24.0",
+    "babel-loader": "^6.4.1",
+    "babel-plugin-transform-es2015-spread": "^6.22.0",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-plugin-transform-react-jsx": "^6.23.0",
+    "babel-preset-es2015-webpack": "^6.4.3",
+    "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "css-loader": "^0.27.3",
+    "ejs": "^2.5.6",
+    "eslint": "^3.18.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.3",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "html-webpack-plugin": "^2.28.0",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.2",
+    "style-loader": "^0.16.0"
+  },
+  "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "koa": "^2.0.0-alpha.8",
     "koa-bodyparser": "^4.1.0",
     "koa-compress": "^2.0.0",
@@ -16,13 +39,23 @@
     "koa-generic-session": "^1.11.5",
     "koa-json": "^2.0.2",
     "koa-logger": "^2.0.1",
+    "koa-onerror": "^3.1.0",
     "koa-passport": "^3.0.0",
     "koa-route": "^3.2.0",
     "koa-router": "^7.0.1",
     "koa-session": "^5.0.0",
-    "koa-static2": "^0.1.8"
-  },
-  "dependencies": {
-    "koa-onerror": "^3.1.0"
+    "koa-static2": "^0.1.8",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-hot-loader": "^3.0.0-beta.7",
+    "react-redux": "^5.0.5",
+    "react-router-dom": "^4.1.1",
+    "redux": "^3.6.0",
+    "redux-logger": "^3.0.1",
+    "redux-thunk": "^2.2.0",
+    "webpack": "^2.3.2",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.17.1",
+    "whatwg-fetch": "^2.0.3"
   }
 }
