--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "123123",
   "main": "index.js",
   "scripts": {
-    "start": "node ./worker.js"
+    "clean": "rimraf ./public",
+    "start": "npm run clean && node ./worker.js"
   },
   "author": "ljy",
   "license": "MIT",
@@ -26,9 +27,11 @@
     "eslint-plugin-react": "^6.10.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.28.0",
+    "koa-webpack-middleware": "^1.0.5",
     "less": "^2.7.2",
     "less-loader": "^4.0.2",
-    "style-loader": "^0.16.0"
+    "style-loader": "^0.16.0",
+    "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
     "babel-polyfill": "^6.23.0",
