--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-plugin-transform-react-jsx": "^6.23.0",
     "babel-preset-es2015-webpack": "^6.4.3",
     "babel-preset-react": "^6.23.0",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.22.0",
     "css-loader": "^0.27.3",
     "ejs": "^2.5.6",
@@ -34,7 +35,12 @@
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
+    "clone": "^2.1.1",
+    "debug": "^2.6.8",
+    "helmet-webpack-plugin": "0.0.3",
     "koa": "^2.0.0-alpha.8",
     "koa-bodyparser": "^4.1.0",
     "koa-compress": "^2.0.0",
