--- a/package.json
+++ b/package.json
@@ -58,9 +58,12 @@
     "koa-static2": "^0.1.8",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
+    "react-helmet": "^5.1.3",
     "react-hot-loader": "^3.0.0-beta.7",
     "react-redux": "^5.0.5",
+    "react-router": "^2.7.0",
     "react-router-dom": "^4.1.1",
+    "react-router-redux": "^4.0.8",
     "redux": "^3.6.0",
     "redux-logger": "^3.0.1",
     "redux-thunk": "^2.2.0",
