模板nunjucks, 静态资源

--- a/package.json
+++ b/package.json
@@ -53,9 +53,12 @@
     "koa-onerror": "^3.1.0",
     "koa-passport": "^3.0.0",
     "koa-route": "^3.2.0",
-    "koa-router": "^7.0.1",
+    "koa-router": "^7.1.1",
     "koa-session": "^5.0.0",
+    "koa-static": "^3.0.0",
     "koa-static2": "^0.1.8",
+    "koa-views": "^6.0.2",
+    "nunjucks": "^3.0.1",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-helmet": "^5.1.3",
